--- a/board.css
+++ b/board.css
@@ -1,24 +1,45 @@
+@import url("https://fonts.cdnfonts.com/css/pokemon-solid");
 body {
-  height : 1000px;
+  height: 1000px;
   margin: 0;
-  background: url('./img/backArena.jpeg') no-repeat;
+  background: url("./img/arena.jpg") no-repeat;
   background-size: 100% 100%;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Pokemon Solid", sans-serif;
+  font-style: italic;
+  font-weight: lighter;
   display: flex;
   flex-direction: column;
 }
 
+#nav_bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  background: rgb(6, 0, 36, 60%);
+  font-size: larger;
+}
+li {
 
-
+  color: #416aa4;
+  font-family: "Pokemon Solid", sans-serif;
+  text-shadow: 2px 2px 4px black;
+  list-style: none;
+  display: inline-block;
+  padding: 0 30px;
+}
+#homeIcon {
+  height: 100px;
+}
 
 #poke-board {
-  background:rgb(6,0,36, 30%);
-  width: 820px;
-  height: 700px;
+  width: 80%;
+  height: 70%;
   padding: 70px;
   margin: 0px auto;
   border-radius: 84px;
   box-shadow: inset 0px 0px 20px -6px #615961;
+ /*  z-index: -1; */
 }
 
 .card {
@@ -52,7 +73,7 @@ body {
 
 .card .back {
   background-image: url(./img/Cardback.jpeg);
-  background-size: cover; 
+  background-size: cover;
 }
 
 .card .front {
@@ -64,37 +85,56 @@ body {
   backface-visibility: hidden;
 }
 
-#score {
-  background-color: rgba(215, 44, 44, 0.8);
-  border-radius: 8px;
-  font-size: 30px;
-  font-family: Arial;
-  height: 70px;
-  width: 200px;
-  padding: 20px;
-  margin-left: 75%;
-}
-
 h1 {
-  color: rgba(215, 40, 40, 0.9);
-  font-weight: bolder;
-  font-size: 67px;
-  text-align: center;
-  text-shadow: 0px 0px 20px #969696;
+  color: #ffcb00;
+  font-size: 70px;
+  text-shadow: 2px 2px 4px black;
 }
 
-h2 {
-  margin-top: 0;
-  color: #456783;
-  font-weight: bolder;
-  font-size: 35px;
-  text-align: center;
-  text-shadow: 1px red;
-}
+
 
 p {
   font-weight: bolder;
   font-size: 20px;
   text-align: center;
 }
-  
+
+
+/* you win  */
+
+
+.navigation {
+  position: fixed;
+  top: 26%;
+  left: 29%;
+  width: 40%;
+  border-radius: 15%;
+  color: #ffcb00;
+  background: rgb(6, 0, 36, 50%);
+  box-shadow: 2px 2px 2px black;
+  /* visibility: hidden; */
+}
+
+.navigation-two {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.button-instruction {
+  /*position: absolute;*/
+  width: 45px;
+  height: 45px;
+}
+
+.close-instructions {
+  /*position: absolute;*/
+  height: 50px;
+  width: 50px;
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+}
