--- a/board.css
+++ b/board.css
@@ -38,7 +38,7 @@ li {
   margin: 0px auto;
   border-radius: 84px;
   box-shadow: inset 0px 0px 20px -6px #615961;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 .card {
